--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             margin-top: 100px;
             margin-left: auto;
             margin-right: auto;
+            border-radius: 8px;
         }
         body {
             font-family: Arial, sans-serif;
